[package]
name = "rustranslate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
rand = "0.8.5"
reqwest = { version = "0.11.15", features = ["json"] }
serde_json = "1.0.94"
tokio = { version = "1.28.0", features = ["full"] }
